--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<head>
+  <title>Hello World</title>
+  <link href="main.css" rel="stylesheet"/>
+  </head>
+ <body>
+  <h1>Hello World</h1>
 </body>
 </html>
