--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Hello World</title>
+  <title>Grupo Services</title>
   <link href="main.css" rel="stylesheet"/>
   </head>
  <body>
