--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <html>
 <head>
-  <title>Grupo Services</title>
+  <title>Nos comprometemos a fornecer soluções personalizadas para cada cliente e que geram resultados de alta performance para empresas que necessitam de atendimento ao consumidor.
+Focada desde o início de sua história no bom relacionamento com os clientes, a Services conquistou algo de valor imensurável e que não pode ser necessariamente previsto: a propaganda ‘boca-a-boca’, fenômeno que só é possível quando o serviço prestado atinge o grau da excelência e - principalmente - resolve.
+
+Somos Inovação.
+Somos Relacionamento. 
+Somos Digital.
+Somos o Grupo Services.</title>
   <link href="main.css" rel="stylesheet"/>
   </head>
  <body>
-  <h1>Grupo Services</h1>
+  <h1>Nos comprometemos a fornecer soluções personalizadas para cada cliente e que geram resultados de alta performance para empresas que necessitam de atendimento ao consumidor.
+Focada desde o início de sua história no bom relacionamento com os clientes, a Services conquistou algo de valor imensurável e que não pode ser necessariamente previsto: a propaganda ‘boca-a-boca’, fenômeno que só é possível quando o serviço prestado atinge o grau da excelência e - principalmente - resolve.
+
+Somos Inovação.
+Somos Relacionamento. 
+Somos Digital.
+Somos o Grupo Services.</h1>
 </body>
 </html>
