--- a/index.html
+++ b/index.html
@@ -157,32 +157,16 @@ A página do Gitsistemas proporciona um alto nível de confiança, seguindo as n
       <td>Com o comprador cadastrado, o Checkout permite que a compra seja concluída rapidamente, utilizando os dados de pagamento e endereço favoritos do comprador</td>
     </tr>
     <tr>
-      <td><strong>Recorrência</strong></td>
+      <td><strong>Implantação</strong></td>
       <td>O Checkout Cielo possui a Recorrência Programada disponível na API Cielo Ecommerce. <br> Basta que o lojista defina que uma transação deve se repetir, que o Checkout vai executa-la novamente no intervalo definido</td>
     </tr>
     <tr>
-      <td><strong>Antifraude</strong></td>
+      <td><strong>DBM</strong></td>
       <td>O Checkout já possui uma integração com o Antifraude da CyberSource, permitindo a análise de transações de crédito sem uma integração adicional</td>
     </tr>
     <tr>
-      <td><strong>Meios de pagamentos</strong></td>
+      <td><strong>Database Administrator</strong></td>
       <td>O Checkout Cielo possui uma variada gama de meios de pagamento: <br> <strong>Cartões de crédito</strong> <br> <strong>Cartão de Débito</strong><br><strong>Débito Online</strong><br><strong>Boleto Bradesco e Banco do Brasil</strong></td>
-    </tr>
-    <tr>
-      <td><strong>Backoffice Simplificado</strong></td>
-      <td>O Backoffice do Checkout Cielo possui um layout simplificado e dinâmico que permite uma navegação rápida e confortável para que o Lojista possa acompanhar as vendas sem dificuldade</td>
-    </tr>
-    <tr>
-      <td><strong>Integração com Botão e QR Code</strong></td>
-      <td>Sem integração técnica ou o programação, o Checkout disponibiliza uma integração que torna possível realizar a criação de um link gerador de pedidos apenas com um cadastro de produtos dentro do Backoffice Checkout.</td>
-    </tr>
-    <tr>
-      <td><strong>Integração com Plataformas Ecommerce</strong></td>
-      <td>. Possui integração com a Loja Virtual Terra e outras plataformas, já estando presente nas principais plataformas ecommerce do mercado brasileiro</td>
-    </tr>
-    <tr>
-      <td><strong>Relatórios transacionais</strong></td>
-      <td>Dentro do Backoffice, é possível gerar relatórios transnacionais que facilitam a administração de suas vendas: <br> <strong>Relatório de Recorrências</strong> <br> <strong>Relatório de compradores</strong><br><strong>Extrato de vendas</strong><br><strong>Relatório de vendas</strong></td>
     </tr>
   </tbody>
 </table>
