--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ A página do Gitsistemas proporciona um alto nível de confiança, seguindo as n
   <tbody>
     <tr>
       <td><strong>Tela transacional</strong></td>
-      <td>O GitSistemas possui uma tela transacional própria, com um layout otimizado, encurtando os passos no pagamento de suas transações.</td>
+      <td>O GitSistemas possui uma tela transacional própria, com um layout otimizado, encurtando os passos de suas integrações.</td>
     </tr>
     <tr>
       <td><strong>Suporte</strong></td>
